--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -10,5 +10,6 @@ jobs:
           node-version: '16'
       - run: npm install -g bats
       - run: bats -v
-      - run: npm install
+      - run: npm install -g typescript
       - run: node -v
+      - run: tsc -v
